# pydubins

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: test.yml  wheels.yml
dubins/: core.pxd
tests/: test-dubins.py
