[project]
name = "dubins"
version = "1.0.2"
description = "Code to generate and manipulate dubins curves"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools >= 74.1.0", "Cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
ext-modules = [
  {name = "dubins", sources = ["dubins/src/dubins.c", "dubins/dubins.pyx"], include-dirs = ["dubins/include"]}
]
